--- a/cards.properties
+++ b/cards.properties
@@ -1,11 +1,11 @@
 cards.msg =Welcome to the EazyBank Accounts Default application
 cards.build-version=3
 
-cards.mailDetails.hostName=default-cards@eazybytes.com
-cards.mailDetails.port=9002
-cards.mailDetails.from=default-cards@eazybytes.com
-cards.mailDetails.subject=Your Card Details from Eazy Bank Default Environment
+accounts.mailDetails.hostName=default-accounts@eazybytes.com
+accounts.mailDetails.port=9000
+accounts.mailDetails.from=default-accounts@eazybytes.com
+accounts.mailDetails.subject=Your Account Details from Eazy Bank Default Environment
 
-cards.activeBranches[0]=Mumbai
-cards.activeBranches[1]=London
-cards.activeBranches[2]=Washington
+accounts.activeBranches[0]=Mumbai
+accounts.activeBranches[1]=London
+accounts.activeBranches[2]=Washington
